--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "16.0.0",
     "react-bootstrap": "0.31.3",
     "react-dom": "16.0.0",
+    "recharts": "^1.0.0-beta.10",
     "remotedev": "0.2.7"
   },
   "devDependencies": {
