Updated gitignore file for upgrade changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
+.fable/
 .fake/
+.vs/
 obj/
 bin/
 packages/
 paket-files/
 node_modules/
-src/Client/public/
+src/Client/public/js/
+release.cmd
+release.sh
+.idea/
+*.DotSettings.user
+deploy
