Added Watch tool reference to .fsproj
I couldn't get the watch working in my environment without this. Maybe this would help others as well?

--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -9,5 +9,8 @@
     <Compile Include="Api.fs" />
     <Compile Include="Server.fs" />
   </ItemGroup>
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.2" />
+  </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
