--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -5,7 +5,7 @@
   <ItemGroup>
     <Compile Include="../Shared/Shared.fs" />
     <Compile Include="ViewHelpers.fs" />
-    <Compile Include="app.fs" />
+    <Compile Include="App.fs" />
     <Compile Include="Client.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
