Upgraded to latest SAFE features.

--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
     "private": true,
     "devDependencies": {
-        "@babel/core": "^7.2.0",
-        "@babel/plugin-transform-runtime": "^7.2.0",
-        "@babel/polyfill": "^7.0.0",
-        "@babel/preset-env": "^7.2.0",
-        "@babel/runtime": "^7.2.0",
-        "babel-loader": "^8.0.0",
+        "@babel/core": "^7.6.4",
+        "@babel/plugin-transform-runtime": "^7.6.2",
+        "@babel/polyfill": "^7.6.0",
+        "@babel/preset-env": "^7.6.3",
+        "@babel/runtime": "^7.6.3",
+        "@fortawesome/fontawesome-free": "^5.11.2",
+        "babel-loader": "^8.0.5",
+        "bulma": "^0.8.0",
         "copy-webpack-plugin": "^4.6.0",
+        "core-js": "^3.3.2",
         "css-loader": "^2.0.1",
-        "fable-compiler": "^2.1.8",
-        "fable-loader": "^2.1.1",
+        "fable-compiler": "^2.4.6",
+        "fable-loader": "^2.1.8",
+        "file-loader": "^4.2.0",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.5.0",
-        "react": "16.5.2",
-        "react-dom": "16.5.2",
+        "open-sans-fonts": "^1.5.1",
+        "react": "^16.10.2",
+        "react-dom": "^16.10.2",
         "remotedev": "^0.2.9",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.23.0",
+        "sass-loader": "^7.3.1",
         "style-loader": "^0.23.1",
-        "webpack": "^4.27.1",
-        "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^3.1.14",
-        "whatwg-fetch": "^3.0.0"
-    },
-    "dependencies": {
+        "terser": "^4.3.9",
+        "webpack": "^4.41.2",
+        "webpack-cli": "^3.3.9",
+        "webpack-dev-server": "^3.8.2",
+        "whatwg-fetch": "^3.0.0",
         "recharts": "^1.4.2"
     }
 }
