--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,27 +1,51 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Attach to Server",
+            "name": "Debug Server",
             "type": "coreclr",
-            "request": "attach",
-            "processId": "${command:pickProcess}"
+            "request": "launch",
+            "preLaunchTask": "Build Server",
+            "program": "${workspaceFolder}/src/Server/bin/Debug/netcoreapp3.1/Server.dll",
+            "args": [],
+            "logging": {
+                "moduleLoad": false
+            },
+            "stopAtEntry": false,
+            "console": "internalConsole",
         },
         {
-            "name": "Attach to Client",
+            "name": "Debug Client",
             "type": "chrome",
             "request": "launch",
+            "preLaunchTask": "Watch Client",
             "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}/src/Client/"
+            "webRoot": "${workspaceFolder}/src/Client",
+            "sourceMaps": true,
+            "sourceMapPathOverrides": {
+                "webpack:///*": "${workspaceFolder}/*",
+            }
+        },
+        {
+            "name": "Watch SAFE App",
+            "type": "chrome",
+            "request": "launch",
+            "preLaunchTask": "Watch Client and Server",
+            "url": "http://localhost:8080",
+            "env": {
+                "vsCodeSession":"true"
+            },
+            "webRoot": "${workspaceFolder}/src/Client",
+            "sourceMaps": true,
+            "sourceMapPathOverrides": {
+                "webpack:///*": "${workspaceFolder}/*",
+            }
         }
     ],
     "compounds": [
         {
-            "name": "Debug SAFE app",
-            "configurations": [ "Attach to Server", "Attach to Client"]
+            "name": "Debug SAFE App",
+            "configurations": [ "Debug Server", "Debug Client" ],
         }
     ]
 }
