--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,17 +4,78 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Run SAFE app",
-            "command": "build",
+            "label": "Build Server",
+            "command": "dotnet",
+            "args": [ "build" ],
             "type": "shell",
-            "group": {
-                "kind": "build",
-                "isDefault": true
+            "options": { "cwd": "${workspaceFolder}/src/Server" },
+            "group": "build",
+            "problemMatcher": [ "$msCompile" ]
+        },
+        {
+            "label": "Watch Client and Server",
+            "command": "fake",
+            "args": [ "build", "-t", "Run" ],
+            "type": "shell",
+            "options": {
+                "cwd": "${workspaceFolder}",
+                "env": {
+                    "vsCodeSession": "true"
+                }
             },
-            "presentation": {
-                "reveal": "always"
+            "group": "build",
+            "isBackground": true,
+            "problemMatcher": {
+                "fileLocation": "absolute",
+                "background": {
+                    "beginsPattern": { "regexp": "run Run" },
+                    "endsPattern": { "regexp": "i ｢wdm｣: Compiled|ℹ ｢wdm｣: Compiled|The terminal process terminated" },
+                    "activeOnStart": true
+                },
+                "pattern": {
+                    "regexp": "^(.*)\\((\\d+),(\\d+)\\): \\((\\d+),(\\d+)\\) (warning|error) FABLE: (.*)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "endLine": 4,
+                    "endColumn": 5,
+                    "severity": 6,
+                    "message": 7
+                }
+            }
+        },
+        {
+            "label": "Watch Client",
+            "command": "fake",
+            "args": [ "build", "-t", "Run" ],
+            "type": "shell",
+            "options": {
+                "cwd": "${workspaceFolder}",
+                "env": {
+                    "vsCodeSession": "true",
+                    "safeClientOnly": "true"
+                }
             },
-            "problemMatcher": "$msCompile"
+            "group": "build",
+            "isBackground": true,
+            "problemMatcher": {
+                "fileLocation": "absolute",
+                "background": {
+                    "beginsPattern": { "regexp": "run Run" },
+                    "endsPattern": { "regexp": "i ｢wdm｣: Compiled|ℹ ｢wdm｣: Compiled|The terminal process terminated" },
+                    "activeOnStart": true
+                },
+                "pattern": {
+                    "regexp": "^(.*)\\((\\d+),(\\d+)\\): \\((\\d+),(\\d+)\\) (warning|error) FABLE: (.*)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "endLine": 4,
+                    "endColumn": 5,
+                    "severity": 6,
+                    "message": 7
+                }
+            }
         }
     ]
 }
