--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -8,6 +8,9 @@
     <Compile Include="DataAccess.fs" />
     <Compile Include="Api.fs" />
     <Compile Include="Server.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Fable.ReactLeaflet" Version="1.0.0" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
