--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -1,39 +1,31 @@
 {
     "private": true,
+    "scripts": {
+        "start": "webpack-dev-server",
+        "build": "webpack -p"
+    },
     "devDependencies": {
         "@babel/core": "^7.6.4",
         "@babel/plugin-transform-runtime": "^7.6.2",
-        "@babel/polyfill": "^7.6.0",
-        "@babel/preset-env": "^7.6.3",
+        "@babel/preset-env": "^7.9.6",
         "@babel/runtime": "^7.6.3",
-        "@fortawesome/fontawesome-free": "^5.11.2",
         "babel-loader": "^8.0.5",
-        "bulma": "^0.8.0",
-        "copy-webpack-plugin": "^4.6.0",
+        "copy-webpack-plugin": "^5.1.1",
         "core-js": "^3.3.2",
-        "css-loader": "^2.0.1",
-        "fable-compiler": "^2.4.6",
+        "fable-compiler": "^2.10.2",
         "fable-loader": "^2.1.8",
         "file-loader": "^4.2.0",
         "html-webpack-plugin": "^3.2.0",
-        "mini-css-extract-plugin": "^0.5.0",
-        "open-sans-fonts": "^1.5.1",
         "react": "^16.10.2",
         "react-dom": "^16.10.2",
-        "recharts": "^1.4.2",
         "remotedev": "^0.2.9",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.23.0",
-        "sass-loader": "^7.3.1",
-        "style-loader": "^0.23.1",
         "terser": "^4.3.9",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.9",
-        "webpack-dev-server": "^3.8.2",
-        "whatwg-fetch": "^3.0.0"
+        "webpack-dev-server": "^3.8.2"
     },
     "dependencies": {
-        "bulmaswatch": "^0.7.5",
         "leaflet": "1.6.0",
         "react-leaflet": "2.6.1"
     }
