--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -4,7 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ViewHelpers.fs" />
-    <Compile Include="App.fs" />
+    <Compile Include="Index.fs" />
     <Compile Include="Client.fs" />
   </ItemGroup>
   <ItemGroup>
