Upgraded dojo to use SAFE v3 and newer components like SweetAlert

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
 .fable/
+*.fs.js
 .fake/
+.farmer/
+.idea/
+.ionide/
 .vs/
+deploy/
 obj/
 bin/
 packages/
 paket-files/
 node_modules/
-src/Client/public/js/
 release.cmd
 release.sh
-.idea/
+*.orig
 *.DotSettings.user
-deploy
-/.ionide/
