--- a/package.json
+++ b/package.json
@@ -6,40 +6,25 @@
         "test:live": "webpack-dev-server --config webpack.tests.config.js"
     },
     "devDependencies": {
-        "@babel/polyfill": "^7.6.0",
-        "@fortawesome/fontawesome-free": "^5.11.2",
-        "bulma": "^0.8.0",
-        "open-sans-fonts": "^1.5.1",
-        "recharts": "^1.4.2",
-        "whatwg-fetch": "^3.0.0",
-        "@babel/core": "^7.6.4",
-        "@babel/plugin-transform-runtime": "^7.6.2",
-        "@babel/preset-env": "^7.9.6",
-        "@babel/runtime": "^7.6.3",
-        "babel-loader": "^8.0.5",
-        "copy-webpack-plugin": "^5.1.1",
-        "core-js": "^3.3.2",
-        "css-loader": "^4.2.1",
-        "fable-compiler": "^2.10.2",
-        "fable-loader": "^2.1.8",
+        "copy-webpack-plugin": "^6.1.0",
+        "css-loader": "^5.2.6",
         "file-loader": "^4.2.0",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.10.0",
-        "react": "^16.10.2",
-        "react-dom": "^16.10.2",
         "remotedev": "^0.2.9",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.26.10",
+        "sass": "^1.34.0",
         "sass-loader": "^9.0.3",
         "style-loader": "^1.2.1",
-        "terser": "^4.3.9",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.9",
         "webpack-dev-server": "^3.8.2"
     },
     "dependencies": {
-        "bulmaswatch": "^0.7.5",
-        "leaflet": "1.6.0",
-        "react-leaflet": "2.6.1"
+        "bulma": "^0.9.3",
+        "pigeon-maps": "^0.19.5",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "recharts": "^2.0.10",
+        "sweetalert2": "^8.19.0"
     }
 }
