--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .fable/
 *.fs.js
+*.fs.js.map
 .fake/
 .farmer/
 .idea/
@@ -8,6 +9,7 @@
 deploy/
 obj/
 bin/
+output/
 packages/
 paket-files/
 node_modules/
