--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "name": "safe-dojo",
     "private": true,
     "scripts": {
         "start": "webpack-dev-server",
@@ -24,7 +25,7 @@
         "pigeon-maps": "^0.19.7",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "recharts": "^2.0.9",
+        "recharts": "^2.0.10",
         "sweetalert2": "^8.19.0"
     }
 }
