SAFE v5 upgrade - Use new paket dependencies, lock, references files

--- a/src/Shared/Shared.fsproj
+++ b/src/Shared/Shared.fsproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Shared.fs" />
+    <None Include="paket.references" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
