--- a/package.json
+++ b/package.json
@@ -1,31 +1,23 @@
 {
     "name": "safe-dojo",
     "private": true,
-    "scripts": {
-        "start": "webpack-dev-server --mode development",
-        "build": "webpack --mode production",
-        "test:live": "webpack-dev-server --mode development --env test"
+    "engines": {
+        "node": "~18 || ~20",
+        "npm": "~9 || ~10"
+    },
+    "scripts": {},
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "copy-webpack-plugin": "^10.0.0",
-        "css-loader": "^6.5.1",
-        "file-loader": "^6.2.0",
-        "html-webpack-plugin": "^5.5.0",
-        "mini-css-extract-plugin": "^2.4.5",
+        "@types/node": "^20.9.1",
+        "@vitejs/plugin-react": "^4.2.0",
+        "autoprefixer": "^10.4.16",
+        "postcss": "^8.4.31",
         "remotedev": "^0.2.9",
-        "sass": "^1.43.4",
-        "sass-loader": "^12.3.0",
-        "style-loader": "^3.3.1",
-        "webpack": "^5.76.0",
-        "webpack-cli": "^4.9.1",
-        "webpack-dev-server": "^4.11.1"
-    },
-    "dependencies": {
-        "bulma": "^0.9.3",
-        "pigeon-maps": "^0.19.7",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "recharts": "^2.1.14",
-        "sweetalert2": "^8.19.0"
+        "sass": "^1.69.5",
+        "tailwindcss": "^3.3.5",
+        "vite": "^5.0.5"
     }
 }
