--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     },
     "scripts": {},
     "dependencies": {
+        "bulma": "^0.9.3",
+        "pigeon-maps": "^0.21.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "bulma": "^0.9.3",
-        "pigeon-maps": "^0.19.7",
         "recharts": "^2.1.14",
         "sweetalert2": "^8.19.0"
     },
@@ -18,6 +18,7 @@
         "@types/node": "^20.9.1",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.16",
+        "mocha": "^8.3.2",
         "postcss": "^8.4.31",
         "remotedev": "^0.2.9",
         "sass": "^1.69.5",
