SAFE v5 upgrade - Replace webpack config with vite config, move from sln to proj

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -7,6 +7,7 @@
     <ItemGroup>
         <None Include="index.html" />
         <None Include="paket.references" />
+        <None Include="vite.config.mjs" />
         <Compile Include="Index.fs" />
         <Compile Include="App.fs" />
     </ItemGroup>
