--- a/src/Shared/Shared.fsproj
+++ b/src/Shared/Shared.fsproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Shared.fs" />
-    <None Include="paket.references" />
+    <Reference Include="paket.references" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
