--- a/src/Server/Properties/launchSettings.json
+++ b/src/Server/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:8080"
+        "applicationUrl": "http://localhost:5000"
     }
   }
 }
